--- a/test-1.html
+++ b/test-1.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<title>test1</title>
 <h1>Which is better, ice cream or cake?</h1>
     <h>Ice cream is obviously better than cake.</h>
     <p>Ice cream is definitely better than cake! I think ice cream is better because:</p>
