--- a/test-1.html
+++ b/test-1.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<title>test-1</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <h1>Which is better, ice cream or cake?</h1>
     <h>Ice cream is obviously better than cake.</h>
     <p>Ice cream is definitely better than cake! I think ice cream is better because:</p>
