--- a/test-1.html
+++ b/test-1.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <title>Document</title>
+</head>
+<body>
 <h1>Which is better, ice cream or cake?</h1>
-    <h>Ice cream is obviously better than cake.</h>
+    <h2>Ice cream is obviously better than cake.</h2>
     <p>Ice cream is definitely better than cake! I think ice cream is better because:</p>
     <ul>
       <li>It's cold and refreshing</li>
@@ -17,5 +19,6 @@
       <li>You can buy it easily from any store</li>
       <li>You can put toppings on it</li>
     </ol>
-
+</body>
+</html>
  
