--- a/test-2.html
+++ b/test-2.html
@@ -10,7 +10,7 @@
 <p>I'm supposed to have three links in this page-- one to the New York Times, one to CNN, and one to the LA Times. But they're all broken!!!</p>
 
 <a href="https://www.nytimes.com"></a>
-<a herf="https://www.cnn.com">Why is this broken??? :(</a>
+<a href="https://www.cnn.com">Why is this broken??? :(</a>
 <a href="https://www.latimes.com/"> help this la times link is broken!!!</a>
 
     
